# hackathon-trading-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.py  agent_card.json  agent_signals.py  agent_state.py  ai_backends.py  ai_prompts.py  calc_reputation.py  chart_analyzer.py  config.py  docker-compose.yml  erc8004.py  erc8004_abi.py  erc8004_card.py  erc8004_chain.py  executor.py  hackathon-agent.service  hackathon_abi.py  hackathon_chain.py  indicators.py  kraken_cli.py  kraken_data.py  merkle.py  opus_analyst.py  pyproject.toml  requirements.txt  risk_manager.py  strategies.py  validate.py  validation_writer.py
.github/workflows/: test.yml
dashboard/: data.json  index.html  update_dashboard.py
docs/: architecture.md  erc8004_research.md  wfo_summary.md
tests/: test_core.py  test_integration.py  test_merkle_reputation.py
validation/: risk_checks.json  strategy_checkpoints.json  trade_intents.json
